tests/baselines/reference/typeOfThisInStaticMembers8(target=es6).errors.txt
typeOfThisInStaticMembers8.ts(5,49): error TS2339: Property 'f' does not exist on type '(Anonymous class)'.
typeOfThisInStaticMembers8.ts(11,22): error TS2339: Property 'f' does not exist on type 'CC'.
typeOfThisInStaticMembers8.ts(13,29): error TS2339: Property 'f' does not exist on type 'CC'.


==== typeOfThisInStaticMembers8.ts (3 errors) ====
    class C {
        static f = 1;
        static arrowFunctionBoundary = () => this.f + 1;
        static functionExprBoundary = function () { return this.f + 2 };
        static classExprBoundary = class { a = this.f + 3 };
                                                    ~
!!! error TS2339: Property 'f' does not exist on type '(Anonymous class)'.
        static functionAndClassDeclBoundary = (() => {
            function foo () {
                return this.f + 4
            }
            class CC {
                a = this.f + 5
                         ~
!!! error TS2339: Property 'f' does not exist on type 'CC'.
                method () {
                    return this.f + 6
                                ~
!!! error TS2339: Property 'f' does not exist on type 'CC'.
                }
            }
        })();
    }
    